# ipttc

./: .gitattributes  .gitignore  README.md  env.sample  pyproject.toml
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml
dbt_project/config/: profiles.yml
dbt_project/macros/utils/: create_target_databases.sql  default__test_constraints.sql  drop_target_databases.sql  generate_database_name.sql  generate_schema_name.sql  swap_to_production.sql
dbt_project/models/production/ipttc/: match_by_player_by_set_wide.sql  match_by_team_by_set_long.sql  match_by_team_by_set_wide.sql  match_info.sql  player_profiles.sql
dbt_project/models/transform/ipttc/: r_competition_event_info.sql  r_competition_info.sql  r_match_info.sql  r_player_profiles.sql  schema.yml  t_competition_dates.sql  t_competition_events.sql  t_competition_phases.sql  t_competition_tables.sql  t_match_by_player_by_set_wide.sql  t_match_by_team_by_set_long.sql  t_match_by_team_by_set_wide.sql  t_match_info.sql  t_matches_by_team.sql  t_player_profiles.sql
src/: __init__.py
src/assets/dbt/: __init__.py
src/assets/ipttc/: __init__.py
src/utils/: constants.py  utils.py
tmpsomkdp6b/history/: runs.db
tmpsomkdp6b/history/runs/: index.db
tmpsomkdp6b/schedules/: schedules.db
