[project]
name = "ipttc"
version = "0.1.0"
description = "Default template for PDM package"

dependencies = [
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-dbt>=0.22.0",
    "dagster-airbyte>=0.22.0",
    "dagster-snowflake-pandas>=0.22.0",
    "pandas",
    "dbt-snowflake",
    "requests",
    "datetime",
    "unidecode",
    "beautifulsoup4",
    "numpy>=1.26.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
]
readme = "README.md"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.dagster]
module_name = "src"
